WIP - Use virtual threads, use MCPing library and strip out some very bad code